// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow component rendering variants should match to snapshot - TableRow with selected on: TableComponent with dividers 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-3"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head Mui-selected makeStyles-selected-2"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test table cell text
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test table cell text
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test table cell text
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`TableRow component rendering variants should match to snapshot - standard TableRow: TableComponent with dividers 1`] = `
<div
  className="MuiTableContainer-root"
>
  <table
    className="MuiTable-root makeStyles-root-1"
    role={null}
  >
    <thead
      className="MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head Mui-selected makeStyles-selected-2"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test table cell text
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test table cell text
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Test table cell text
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
